--- a/Client/Angular/src/app/components/home/home.component.html
+++ b/Client/Angular/src/app/components/home/home.component.html
@@ -11,7 +11,9 @@
     <div class="col">
       <div class="card text-center h-100 opacity-75">
 
-          <img class="card-img-top" src="https://images.unsplash.com/photo-1627281795187-9605af7235b0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1330&q=80" class="card-img-top" alt="...">
+        <img class="card-img-top"
+          src="https://images.unsplash.com/photo-1627281795187-9605af7235b0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1330&q=80"
+          class="card-img-top" alt="...">
 
         <div class="card-body">
           <h5 class="card-title">Browse hardwares</h5>
@@ -24,14 +26,19 @@
     <div class="col">
       <div class="card text-center h-100 opacity-75">
         <div class="img-wrapper">
-          <img src="https://images.unsplash.com/photo-1678642851519-15d224598d68?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1880&q=80" class="card-img-top" alt="...">
+          <img
+            src="https://images.unsplash.com/photo-1678642851519-15d224598d68?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1880&q=80"
+            class="card-img-top" alt="...">
         </div>
         <div class="card-body">
           <h5 class="card-title">Build your PC</h5>
-          <p class="card-text">There are endless variations for building a strong, unique desktop PC based on your needs.</p>
+          <p class="card-text">There are endless variations for building a strong, unique desktop PC based on your
+            needs.</p>
         </div>
         <div class="card-footer p-0">
-          <a [routerLink]="userId !== null ? [userId, '/builder'] : ['login']" class="btn btn-dark">Build a PC</a>
+          <button [routerLink]="userId ? [userId, 'builder'] : ['login']" class="btn btn-dark">
+            Build a PC
+          </button>
         </div>
       </div>
     </div>
@@ -39,12 +46,16 @@
     <div class="col">
       <div class="card text-center h-100 opacity-75">
         <div class="img-wrapper">
-          <img src="https://images.unsplash.com/photo-1623243747526-d1a0413e45c6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1168&q=80" class="card-img-top" alt="...">
+          <img
+            src="https://images.unsplash.com/photo-1623243747526-d1a0413e45c6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1168&q=80"
+            class="card-img-top" alt="...">
         </div>
         <div class="card-body">
           <h5 class="card-title">Stay the best</h5>
           <p class="card-text">If you sign up, you can save multiple builds and come back to compare them anytime.</p>
-          <a routerLink="/login" class="btn btn-dark">Login</a>
+          <a [routerLink]="userId ? ['/configs', userId, 'myconfigs'] : ['signup']" class="btn btn-dark">
+            {{!userId ? 'Sign up' : 'My configs'}}
+          </a>
         </div>
       </div>
     </div>
